deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookish-bliss-service
  namespace: bookish-bliss
spec:
  selector:
    app: bookish-bliss
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
